@@ -77,6 +77,7 @@
 	- add %%pubkey attribute to read armored pubkey files into header.
 	- permit both relative/absolute paths, display 'P' when verifying.
 	- resurrect automagic perl(foo) dependency generation.
+	- add BETA-GPG-KEY (but not in headers using %%pubkey yet).
 
 4.0.4 -> 4.1:
 	- loosely wire beecrypt library into rpm.
